--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,38 +25,48 @@ android {
     dataBinding {
         enabled = true
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
 }
 
 dependencies {
     def lifecycle_version = "2.0.0"
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+
+    implementation project(':common')
+    implementation project(':local')
+    implementation project(':remote')
 
     implementation 'androidx.core:core-ktx:1.1.0-alpha04'
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
-
     //arch components
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-
     //ui
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
-
     //rx
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation "io.reactivex.rxjava2:rxjava:2.2.7"
-
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
     //glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
+    //test
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    testImplementation 'org.mockito:mockito-core:2.23.0'
+    testImplementation 'androidx.test:core:1.0.0'
+    // https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-reflect
+    testImplementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.21'
 
-    implementation project(":common")
-    implementation project(":local")
-    implementation project(':remote')
+    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+    androidTestImplementation 'org.mockito:mockito-android:2.24.5'
+    androidTestImplementation 'androidx.test:runner:1.1.2-alpha01'
+    androidTestImplementation "androidx.arch.core:core-testing:2.0.0"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 }
