--- a/common/build.gradle
+++ b/common/build.gradle
@@ -3,16 +3,13 @@ apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
     //moshi
-    api("com.squareup.moshi:moshi-kotlin:1.8.0")
+    api 'com.squareup.moshi:moshi-kotlin:1.8.0'
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.8.0")
-
     //room
     api "androidx.room:room-runtime:$room_version"
-
     testImplementation 'junit:junit:4.12'
 }
 
